organized calling & evaluating lucy richardson into a function. Got rid of extraneous makefile stuff.

--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -3,10 +3,10 @@ CXXFLAGS = -std=c++11 # flags
 PNG_LIB = `libpng-config --ldflags`
 
 make: main.cpp cpuLucyRichardson.o benchmarks.o
-	$(CC) $(CXXFLAGS) main.cpp png_lib/lodepng.cpp cpuLucyRichardson.cpp ../benchmarks/metrics.cpp $(PNG_LIB) -o deblur.out
+	$(CC) $(CXXFLAGS) main.cpp cpuLucyRichardson.cpp ../benchmarks/metrics.cpp $(PNG_LIB) -o deblur.out
 
 debug: main.cpp cpuLucyRichardson.o benchmarks.o
-	$(CC) $(CXXFLAGS) -g main.cpp png_lib/lodepng.cpp cpuLucyRichardson.cpp ../benchmarks/metrics.cpp $(PNG_LIB)
+	$(CC) $(CXXFLAGS) -g main.cpp cpuLucyRichardson.cpp ../benchmarks/metrics.cpp $(PNG_LIB)
 
 cpuLucyRichardson.o: cpuLucyRichardson.cpp cpuLucyRichardson.hpp
 	$(CC) $(CXXFLAGS) -c cpuLucyRichardson.cpp
